# saleae_tdm_analyer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  check_setup.py
.github/workflows/: build.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.4-MILESTONE-AUDIT.md  v1.5-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v1.5-MILESTONE-AUDIT.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md
.planning/milestones/v1.0-phases/01-correctness/: 01-01-SUMMARY.md
.planning/milestones/v1.0-phases/02-build-hygiene/: 02-01-PLAN.md  02-01-SUMMARY.md  02-RESEARCH.md
.planning/milestones/v1.0-phases/03-code-quality-and-documentation/: 03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md
.planning/milestones/v1.4-phases/04-sdk-audit-and-housekeeping/: 04-01-PLAN.md  04-01-SUMMARY.md  04-CONTEXT.md  04-UAT.md
.planning/milestones/v1.4-phases/05-framev2-enrichment/: 05-RESEARCH.md
.planning/milestones/v1.4-phases/06-sample-rate-validation/: 06-01-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md
.planning/milestones/v1.4-phases/07-rf64-wav-export/: 07-01-SUMMARY.md  07-RESEARCH.md
.planning/milestones/v1.5-phases/08-hla-scaffold-settings/: 08-RESEARCH.md
.planning/milestones/v1.5-phases/09-core-wav-writing/: 09-01-PLAN.md  09-01-SUMMARY.md  09-RESEARCH.md
.planning/milestones/v1.5-phases/10-error-handling-documentation/: 10-RESEARCH.md
.planning/milestones/v1.5-phases/11-fix-wav-sample-ordering/: 11-01-PLAN.md  11-01-SUMMARY.md
.planning/phases/01-correctness/: 01-01-PLAN.md  01-RESEARCH.md
.planning/phases/02-build-hygiene/: 02-01-PLAN.md
.planning/phases/03-code-quality-and-documentation/: 03-01-PLAN.md  03-02-SUMMARY.md
.planning/phases/04-sdk-audit-and-housekeeping/: 04-RESEARCH.md
.planning/phases/05-framev2-enrichment/: 05-01-PLAN.md  05-01-SUMMARY.md  05-CONTEXT.md
.planning/phases/06-sample-rate-validation/: 06-01-PLAN.md  06-01-SUMMARY.md
.planning/phases/07-rf64-wav-export/: 07-01-PLAN.md  07-02-PLAN.md  07-02-SUMMARY.md
.planning/phases/08-hla-scaffold-settings/: 08-01-PLAN.md  08-01-SUMMARY.md  08-RESEARCH.md
.planning/phases/09-core-wav-writing/: 09-01-PLAN.md  09-01-SUMMARY.md
.planning/phases/10-error-handling-documentation/: 10-01-PLAN.md  10-01-SUMMARY.md  10-RESEARCH.md
.planning/phases/11-fix-wav-sample-ordering/: 11-01-PLAN.md  11-01-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cmake/: ExternalAnalyzerSDK.cmake
hla/: README.md  TdmWavExport.py
hla-audio-stream/: README.md  TdmAudioStream.py  _decode_cffi_build.py  _decode_cffi_wrapper.py  _decode_fast.pyx  _decode_rawc.c  _tdm_utils.py  extension.json  setup_cython.py  setup_rawc.py
hla-wav-export/: README.md  TdmWavExport.py  extension.json
src/: I2sAnalyzer.cpp  I2sAnalyzer.h  I2sAnalyzerResults.cpp  I2sAnalyzerResults.h  I2sAnalyzerSettings.cpp  I2sAnalyzerSettings.h  I2sSimulationDataGenerator.cpp  I2sSimulationDataGenerator.h  TdmAnalyzer.cpp  TdmAnalyzer.h  TdmAnalyzerResults.cpp  TdmAnalyzerResults.h  TdmAnalyzerSettings.cpp  TdmAnalyzerSettings.h  TdmProfiler.h  TdmSimulationDataGenerator.cpp  TdmSimulationDataGenerator.h
tests/: BENCHMARK_BASELINE.md  BENCHMARK_BASELINE_v2.5.md  CMakeLists.txt  C_EXTENSION_DESIGN.md  OPTIMIZATION_RESULTS.md  PERFORMANCE.md  PROFILING_RESULTS.md  README.md  TESTING.md  extra_stubs.cpp  framev2_capture.h  tdm_benchmark.cpp  tdm_correctness.cpp  tdm_test_helpers.cpp  tdm_test_helpers.h  tdm_test_signal.h  test_advanced_analysis.cpp  test_audio_batch.cpp  test_decode_values.cpp  test_error_conditions.cpp  test_framev2.cpp  test_generator_blindspots.cpp  test_hla_decode.py  test_sign_conversion.cpp  test_stress_reliability.py
tools/: README.md  benchmark_logic2.py  prepare_benchmark_captures.py
tools/tdm-audio-bridge/: README.md  _build.py  gen_version.py  launch-gui.bat  launch-gui.sh  pyproject.toml
tools/tdm-audio-bridge/tdm_audio_bridge/: __main__.py  cli.py  client.py  gui.py  player.py  protocol.py
tools/tdm-test-harness/: README.md  pyproject.toml
tools/tdm-test-harness/tdm_test_harness/: cli.py  frame_emitter.py  hla_driver.py  signals.py  verifier.py
