[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tdm-audio-bridge"
version = "0.1.0"
description = "Companion CLI for the TDM Audio Stream HLA — plays decoded TDM audio in real time"
dependencies = ["click>=8.0", "sounddevice>=0.4", "numpy>=1.20"]

[project.scripts]
tdm-audio-bridge = "tdm_audio_bridge.cli:main"
