[build-system]
requires = ["setuptools>=68"]
build-backend = "_build"
backend-path = ["."]

[project]
name = "tdm-audio-bridge"
version = "0.1.0"
description = "Companion CLI for the TDM Audio Stream HLA - plays decoded TDM audio in real time"
requires-python = ">=3.9"
dependencies = ["click>=8.0", "sounddevice>=0.4", "numpy>=1.20"]

[project.scripts]
tdm-audio-bridge = "tdm_audio_bridge.cli:main"

[project.gui-scripts]
tdm-audio-bridge-gui = "tdm_audio_bridge.gui:launch"
